--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <div id="youtube-card">
   How to create a Stick Hero game with JavaScript and HTML Canvas
 </div>
+    <canvas id="game" width="375" height="375"></canvas>
   </body>
 </html>
