--- a/index.html
+++ b/index.html
@@ -3,46 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Tracker</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <title>Timer</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Expense Tracker</h1>
-
-        <h2>Add Income</h2>
-        <input type="text" id="incomeSource" placeholder="Source">
-        <input type="number" id="incomeAmount" placeholder="Amount">
-        <button onclick="addIncome()">Add Income</button>
-
-        <h2>Add Expense</h2>
-        <select id="expenseCategory">
-            <option value="Food">Food</option>
-            <option value="Accessories">Accessories</option>
-            <option value="Books">Books</option>
-            <option value="Transport">Transport</option>
-            <option value="Fees">Fees</option>
-            <option value="Others">Others</option>
-        </select>
-        <input type="text" id="expenseDetails" placeholder="Details">
-        <input type="number" id="expenseAmount" placeholder="Amount">
-        <button onclick="addExpense()">Add Expense</button>
-
-        <button id="generatePdf" onclick="generatePDF()">Generate PDF</button>
-
-        <h2>Summary</h2>
-        <div id="summary">
-            <p>Total Income: <span id="totalIncome">0</span></p>
-            <p>Total Expenses: <span id="totalExpenses">0</span></p>
-            <p>Balance: <span id="balance">0</span></p>
-        </div>
-
-        <h2>Income List</h2>
-        <ul id="incomeList"></ul>
-
-        <h2>Expense List</h2>
-        <ul id="expenseList"></ul>
+        <h1>Timer</h1>
+        <div id="timer">00:00</div>
+        <input type="number" id="minutes" placeholder="Minutes" min="0">
+        <input type="number" id="seconds" placeholder="Seconds" min="0" max="59">
+        <button id="start">Start Timer</button>
+        <button id="stop">Stop Timer</button>
+        <button id="reset">Reset Timer</button>
     </div>
     <script src="script.js"></script>
 </body>
