--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timer</title>
+    <title>Big Timer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="container">
         <h1>Timer</h1>
         <div id="timer">00:00</div>
-        <input type="number" id="minutes" placeholder="Minutes" min="0">
-        <input type="number" id="seconds" placeholder="Seconds" min="0" max="59">
-        <button id="start">Start Timer</button>
-        <button id="stop">Stop Timer</button>
-        <button id="reset">Reset Timer</button>
+        <div class="controls">
+            <input type="number" id="minutes" placeholder="Minutes" min="0">
+            <input type="number" id="seconds" placeholder="Seconds" min="0" max="59">
+            <button id="start">Start Timer</button>
+            <button id="stop">Stop Timer</button>
+            <button id="reset">Reset Timer</button>
+            <button id="fullscreen">Fullscreen</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
