--- a/index.html
+++ b/index.html
@@ -3,22 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Big Timer</title>
+    <title>QR Code Generator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container" id="container">
-        <h1>Timer</h1>
-        <div id="timer">00:00</div>
-        <div class="controls">
-            <input type="number" id="minutes" placeholder="Minutes" min="0">
-            <input type="number" id="seconds" placeholder="Seconds" min="0" max="59">
-            <button id="start">Start Timer</button>
-            <button id="stop">Stop Timer</button>
-            <button id="reset">Reset Timer</button>
-            <button id="fullscreen">Fullscreen</button>
-        </div>
+    <div class="container">
+        <h1>QR Code Generator</h1>
+        <form id="infoForm">
+            <label for="idNo">ID No:</label>
+            <input type="text" id="idNo" pattern="(\b\w+\b\s*){1,5}" required>
+
+            <label for="name">Name:</label>
+            <input type="text" id="name" required>
+
+            <label for="fatherName">Father's Name:</label>
+            <input type="text" id="fatherName" required>
+
+            <label for="motherName">Mother's Name:</label>
+            <input type="text" id="motherName" required>
+
+            <label for="dob">Date of Birth:</label>
+            <input type="date" id="dob" required>
+
+            <label for="bloodGroup">Blood Group:</label>
+            <input type="text" id="bloodGroup" required>
+
+            <button type="submit">Generate QR Code</button>
+        </form>
+        <div id="qrcode"></div>
+        <button id="downloadBtn" style="display: none;">Download QR Code</button>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-qrcode/1.0/jquery.qrcode.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
