--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
         <h1>QR Code Generator</h1>
         <form id="infoForm">
             <label for="idNo">ID No:</label>
-            <input type="text" id="idNo" pattern="(\b\w+\b\s*){1,5}" required>
+            <input type="text" id="idNo" required>
+            <br>
 
             <label for="name">Name:</label>
             <input type="text" id="name" required>
-
+<br>
             <label for="fatherName">Father's Name:</label>
             <input type="text" id="fatherName" required>
-
+<br>
             <label for="motherName">Mother's Name:</label>
             <input type="text" id="motherName" required>
-
+<br>
             <label for="dob">Date of Birth:</label>
             <input type="date" id="dob" required>
-
+<br>
             <label for="bloodGroup">Blood Group:</label>
             <input type="text" id="bloodGroup" required>
-
+<br>
             <button type="submit">Generate QR Code</button>
         </form>
         <div id="qrcode"></div>
